--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,10 @@
 <h3>Home</h3>
 
 <% if user_signed_in? %>
+<h3> Resources </h3>
+<% @resources.each do |resource| %>
+<p> <%= resource.name %> </p>
+	<% end %> 
 <p> Signed in as: <%= current_user.name %> </p>
 <% else %>
 <p>You are not logged in</p>
