controller for resources added todo: view for resources + reservations

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
-<h3>Home</h3>
 
 <% if user_signed_in? %>
 <h3> Resources </h3>
 <% @resources.each do |resource| %>
-<p> <%= resource.name %> </p>
+<p> <%=link_to resource.name, resource %> </p>
 	<% end %> 
 <p> Signed in as: <%= current_user.name %> </p>
 <% else %>
+<h3>Home</h3>
 <p>You are not logged in</p>
 <% end %>
