reservation feature almost works, timestamp doesnt work properly

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -22,9 +22,9 @@
 		<% else %>
 		<td>
 			<%= form_tag(:controller => "reserve", :action => "reserve_resource", :method => "post") do %>
-				<%= hidden_field_tag(:user, current_user) %>
-				<%= hidden_field_tag(:resource, @resource) %>
-				<%= hidden_field_tag(:starttime, Time.now.midnight + Time.now.hour.hours) %>
+				<%= hidden_field_tag(:user_id, current_user.id) %>
+				<%= hidden_field_tag(:resource_id, @resource.id) %>
+				<%= hidden_field_tag(:reservetime, Time.now.midnight + Time.now.hour.hours) %>
 			  	<%= submit_tag("reserve") %>
 			  
 			<% end %>
