--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -24,7 +24,7 @@
 			<%= form_tag(:controller => "reserve", :action => "reserve_resource", :method => "post") do %>
 				<%= hidden_field_tag(:user_id, current_user.id) %>
 				<%= hidden_field_tag(:resource_id, @resource.id) %>
-				<%= hidden_field_tag(:reservetime, Time.now.midnight + Time.now.hour.hours) %>
+				<%= hidden_field_tag(:reservetime, Time.now.midnight + i.hours) %>
 			  	<%= submit_tag("reserve") %>
 			  
 			<% end %>
