reservation works - todo cancellation, cucumber test refactoring, rocket tests

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -18,16 +18,22 @@
 			
 		 <% end %>
 		<% if reservedFor != nil%>
-		<td> <%= reservedFor %></td>
+			<% if reservedFor == current_user.name %>
+			<td> Reserved for You </td>
+			<% else %>
+			<td> <%= reservedFor %></td>
+			<% end %>
+		
+		
 		<% else %>
 		<td>
 			<%= form_tag(:controller => "reserve", :action => "reserve_resource", :method => "post") do %>
 				<%= hidden_field_tag(:user_id, current_user.id) %>
 				<%= hidden_field_tag(:resource_id, @resource.id) %>
-				<%= hidden_field_tag(:reservetime, Time.now.midnight + i.hours) %>
+				<%= hidden_field_tag(:reservetime, (DateTime.now.midnight + i.hours).to_s(:db)) %>
 			  	<%= submit_tag("reserve") %>
 			  
-			<% end %>
+		<% end %>
 			
 		</td>
 		<% end %> 
