--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -34,7 +34,7 @@
 		
 		
 		<% else %>
-		<td>
+		<td>Slot is Free, 
 			<%= form_tag(:controller => "reserve", :action => "reserve_resource", :method => "post") do %>
 			<%= hidden_field_tag(:user_id, current_user.id) %>
 			<%= hidden_field_tag(:resource_id, @resource.id) %>
