robot tests completed for core features

--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -27,7 +27,7 @@
 										<% end %>
 				</td>
 			<% else %>
-				<td> <%= reservedFor %></td>
+				<td> Reserved for: <%= reservedFor %></td>
 			
 				
 			<% end %>
